ensure code scrolls if overflowing x

--- a/public/sass/_code.scss
+++ b/public/sass/_code.scss
@@ -1,15 +1,21 @@
-pre code.language-typescript {
-   .token {
-      &.keyword {
-         color: blue;
-      }
+pre {
 
-      &.class-name, &.function {
-         color: green;
-      }
+   overflow-x: auto;
 
-      &.string {
-         color: red;
+   code.language-typescript {
+
+      .token {
+         &.keyword {
+            color: blue;
+         }
+
+         &.class-name, &.function {
+            color: green;
+         }
+
+         &.string {
+            color: red;
+         }
       }
    }
 }
